force-app/main/default/objects/RD_Option_Code__c/RD_Option_Code__c.object-meta.xml
<CustomObject>
    <label>RD Option Code</label>
    <nameField>
        <label>RD Option Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Option Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>