force-app/main/default/objects/RD_Option_Code__c/fields/Electropolish__c.field-meta.xml
<CustomField>
    <fullName>Electropolish__c</fullName>
    <label>Electropolish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>