force-app/main/default/objects/RD_Option_Code__c/fields/GirdleOpt__c.field-meta.xml
<CustomField>
    <fullName>GirdleOpt__c</fullName>
    <label>GirdleOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>