force-app/main/default/objects/RD_Option_Code__c/fields/HolderOutOpt__c.field-meta.xml
<CustomField>
    <fullName>HolderOutOpt__c</fullName>
    <label>HolderOutOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>