force-app/main/default/objects/RD_Option_Code__c/fields/HolderRingOpt__c.field-meta.xml
<CustomField>
    <fullName>HolderRingOpt__c</fullName>
    <label>HolderRingOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>