force-app/main/default/objects/RD_Option_Code__c/fields/IGaskOpt__c.field-meta.xml
<CustomField>
    <fullName>IGaskOpt__c</fullName>
    <label>IGaskOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>