force-app/main/default/objects/RD_Option_Code__c/fields/ILinerOpt__c.field-meta.xml
<CustomField>
    <fullName>ILinerOpt__c</fullName>
    <label>ILinerOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>