force-app/main/default/objects/RD_Option_Code__c/fields/IRingOpt__c.field-meta.xml
<CustomField>
    <fullName>IRingOpt__c</fullName>
    <label>IRingOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>