force-app/main/default/objects/RD_Option_Code__c/fields/Metal_Girdle__c.field-meta.xml
<CustomField>
    <fullName>Metal_Girdle__c</fullName>
    <label>Metal Girdle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>