force-app/main/default/objects/RD_Option_Code__c/fields/OGaskOpt__c.field-meta.xml
<CustomField>
    <fullName>OGaskOpt__c</fullName>
    <label>OGaskOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>