force-app/main/default/objects/RD_Option_Code__c/fields/Surface_Finish__c.field-meta.xml
<CustomField>
    <fullName>Surface_Finish__c</fullName>
    <label>Surface Finish</label>
    <length>255</length>
    <type>Text</type>
</CustomField>