force-app/main/default/objects/RD_Option_Code__c/fields/VacSuptOpt__c.field-meta.xml
<CustomField>
    <fullName>VacSuptOpt__c</fullName>
    <label>VacSuptOpt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>