force-app/main/default/objects/RD_Option_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Electropolish__c</columns>
    <columns>Surface_Finish__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>